--- a/scratch_pad_2019.Rmd
+++ b/scratch_pad_2019.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "2019 Scratch Pad"
+title: "2019 Exploratory Data Analysis"
 author: "<p style='font-style: italic;'>Bryan Johns</p>"
 # date: "`r format(Sys.Date(), '%Y-%m')`"
 date: "March 2025"
@@ -29,7 +29,7 @@ library(ggspatial)
 library(leaflet)
 ```
 
-## Scratch Pad for 2019 Cyclistic Exploratory Data Analysis
+## Full Analytical Workflow and Exploratory Outputs
 
 <div class="button">
   <a href="summary_2019.html#analysis">Back to<br>Cyclistic 2019</a>
